// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.
syntax = "proto3";

import "google/protobuf/empty.proto";

import "repr/src/antichain.proto";
import "repr/src/global_id.proto";
import "expr/src/refresh_schedule.proto";
import "repr/src/relation_and_scalar.proto";
import "storage-types/src/controller.proto";

package mz_compute_types.sinks;

message ProtoComputeSinkDesc {
    mz_repr.global_id.ProtoGlobalId from = 1;
    mz_repr.relation_and_scalar.ProtoRelationDesc from_desc = 2;
    ProtoComputeSinkConnection connection = 3;
    bool with_snapshot = 4;
    mz_repr.antichain.ProtoU64Antichain up_to = 5;
    repeated uint64 non_null_assertions = 6;
    mz_expr.refresh_schedule.ProtoRefreshSchedule refresh_schedule = 7;
}

message ProtoComputeSinkConnection {
    oneof kind {
        google.protobuf.Empty subscribe = 1;
        ProtoPersistSinkConnection persist = 2;
        google.protobuf.Empty copy_to = 3;
    }
}

message ProtoPersistSinkConnection {
    mz_repr.relation_and_scalar.ProtoRelationDesc value_desc = 1;
    mz_storage_types.controller.ProtoCollectionMetadata storage_metadata = 2;
}
